@startuml
skinparam linetype ortho
skinparam groupInheritance 2

title ER diagram (Crow's Foot) - Complete System

note as AuditNote
  All entities contain Audit fields:
  - id: string
  - createdAtUTC: Date
  - updatedAtUTC: Date
  - createdBy: string
  - updatedBy: string
end note

' --- Enums ---
enum TransportationMode {
    WALKING
    WHEELCHAIR
    BICYCLE
    CAR
    BUS
    METRO
    ELEVATOR
    ESCALATOR
    STAIRS
}

enum POICategory {
    RESTAURANT
    COFFEE_SHOP
    BATHROOM
    LIBRARY
    OTHER
}

enum LocationType {
    OUTDOOR
    FLOORPLAN
}

enum ShuttleStatus {
    IN_SERVICE
    OUT_OF_SERVICE
    DELAYED
    FULL
}

enum CampusType {
    SGW
    LOYOLA
}

' --- User Management Entities ---
entity "User" as User {
    email: VARCHAR
    password: VARCHAR
    name: VARCHAR
    data: ?
}

entity Administrator extends User {
    date_granted: Date
}

' --- Calendar & Events Entities ---
entity "Calendar" as Calendar {
}

entity "Event" as Event {
    name: VARCHAR
    location_type: ENUM
    start_time: VARCHAR
    end_time: VARCHAR
    recurrence: ?
}

entity Course extends Event {
    course_code: VARCHAR
    description: VARCHAR
}

' --- Planning Entities ---
entity "Task" as Task {
    description: TEXT
    location_type: VARCHAR
    emergency_task: BOOLEAN
    needs_display: BOOLEAN
}

entity "Planner" as Planner {
}

' --- Location Entities ---
entity "Location" as Location {
    location_type: ENUM
}

entity OutdoorLocation extends Location {
    latitude: DOUBLE
    longitude: DOUBLE
    latitude_delta: DOUBLE
    longitude_delta: DOUBLE
}

entity FloorplanLocation extends Location {
    x: INT
    y: INT
}

' --- Route Entities ---
entity "Route" as Route {
    accessible: BOOLEAN
    data: ?
}

entity "RouteSegment" as RouteSegment {
    usage_count: INT
    transportation_mode: ENUM
    path: ?
    order: INT
}

entity "IndoorPath" as IndoorPath {
    nodeids: VARCHAR[]
}

entity "FloorTransition" as FloorTransition {
    transition_type: ENUM
}

' --- Building & Space Entities ---
entity "Room" as Room {
    number: VARCHAR
    type: VARCHAR
}

entity "Campus" as Campus {
    name: VARCHAR
}

entity "Building" as Building {
    name: VARCHAR
    address: VARCHAR
    description: TEXT
    polygon_shape: ?
    opening_hours: VARCHAR
}

entity "Floor" as Floor {
    number: INT
    is_wheelchair_accessible: BOOLEAN
    has_elevator_access: BOOLEAN
    has_ramp_access: BOOLEAN
}

entity "Floorplan" as Floorplan {
    data: ?
}

entity "POI" as POI {
    type: VARCHAR
    name: VARCHAR
    category: ENUM
    description: TEXT
}

' --- Shuttle Entities ---
entity "ShuttleSchedule" as ShuttleSchedule {
    operating_days: VARCHAR
    ride_time: VARCHAR
    first_departure_loyola: TIME
    first_departure_sgw: TIME
    last_departure_loyola: TIME
    last_departure_sgw: TIME
    requirements: TEXT[]
}

entity "ShuttleStop" as ShuttleStop {
    name: VARCHAR
    address: VARCHAR
    latitude: DOUBLE
    longitude: DOUBLE
    campus_type: ENUM
}

entity "Shuttle" as Shuttle {
    shuttleid: VARCHAR
    current_latitude: DOUBLE
    current_longitude: DOUBLE
    status: ENUM
    icon_image: VARCHAR
}

entity "ShuttleDeparture" as ShuttleDeparture {
    departure_time: TIMESTAMP
    actual_departure_time: TIMESTAMP
    status: ENUM
}

entity "ShuttleRoute" as ShuttleRoute {
    route_name: VARCHAR
    estimated_duration: INT
    distance: DOUBLE
    is_active: BOOLEAN
}

' --- Base Relationships ---
User }--{ Calendar : subscribes
Calendar --{ Event : contains
Planner --{ Task : contains
User -- Planner : owns
User }--o{ Location : "current location"
Event }-- Location : occurs at
Task }-- Location : assigned to

' --- Route Relationships ---
Route --{ RouteSegment : composed of
RouteSegment -- Location : starts at
RouteSegment -- Location : ends at
RouteSegment --o{ IndoorPath : uses
IndoorPath }--{ FloorTransition : contains

' --- Building & Space Relationships ---
Campus --{ Building : contains
Campus -- OutdoorLocation : located at
Building -- OutdoorLocation : located at
Building --{ Floor : contains
Floor --{ Room : contains
Floor -- Floorplan : has
Floorplan --{ FloorplanLocation : defines
Room -- FloorplanLocation : positioned at
POI }-- Location : located at

' --- Shuttle Relationships ---
ShuttleRoute }--{ ShuttleStop : serves
ShuttleStop }-- CampusType : belongs to
Shuttle }-- ShuttleStatus : has
Shuttle }-- ShuttleRoute : follows
ShuttleDeparture }-- ShuttleStop : departs from
ShuttleDeparture }-- Shuttle : operated by
ShuttleSchedule -- ShuttleRoute : defines
Building }--{ ShuttleStop : near
Route }--{ ShuttleRoute : includes

' --- Enum Usage ---
RouteSegment .. TransportationMode
FloorTransition .. TransportationMode
POI .. POICategory
Location .. LocationType
Shuttle .. ShuttleStatus
ShuttleStop .. CampusType

@enduml 